# backtest2605

./: .env.example  .gitignore  README.md  agent.md  cli.py  pyproject.toml
analysis/: metrics.py  plot_style.py
data/: db_config.py  fetch_all.py  fetch_calendar.py  fetch_derivative.py  fetch_description.py  fetch_index_eod.py  fetch_index_members.py  fetch_price_daily.py  fetch_st.py  loaders.py  panels.py
engine/: backtest.py  cash_engine.py  test_backtest.py  test_cash_engine.py  test_missing_returns.py
examples/: backtest_config.yaml  cash_config.yaml  factor_config.yaml
factor/: factor_test.py  plot_factor.py  test_factor_test.py
report/: plot.py  test_report.py
scripts/: test_db_connection.py
tests/: test_backtest.py  test_cash_dashboard.py  test_cash_engine.py  test_factor_test.py  test_missing_returns.py  test_report.py  test_stressfix.py
